Init modifications for shortfin.

--- a/test/test.config
+++ b/test/test.config
@@ -20,6 +20,14 @@
 {ejabberd_service_port,8888}.
 {ejabberd_service_password, <<"secret">>}.
 
+{epgsql_config, #{
+  host => "localhost",
+  username => "shortfin",
+  password => "butterscotch!23",
+  database => "shortfin",
+  timeout => 4000
+}}.
+
 {escalus_users, [
                  {alice, [
                           {username, <<"alice">>},
@@ -35,8 +43,8 @@
                  {alice_sm, [
                              {username, <<"alice_sm">>},
                              {server, <<"localhost">>},
-                             {password, <<"super-secret">>},
-                             {stream_management, true}
+                             {password, <<"super-secret">>}
+                             %% {stream_management, true}
                              %% {manual_ack, true} %% uncomment to prevent automatic
                                                    %% ack sending by escalus_tcp
 
@@ -44,8 +52,8 @@
                  {bob_sm, [
                            {username, <<"bob_sm">>},
                            {server, <<"localhost">>},
-                           {password, <<"hyper-secret">>},
-                           {stream_management, true}
+                           {password, <<"hyper-secret">>}
+                           %% {stream_management, true}
                           ]}
                 ]}.
 
