--- a/rebar.config
+++ b/rebar.config
@@ -15,7 +15,9 @@
         {gun, "1.3.3"},
         {worker_pool, "4.0.3"},
         {fast_tls, "1.1.12"},
-        {fast_scram, "0.4.1"}
+        {fast_scram, "0.4.1"},
+        {pbkdf2, "2.0.0"},
+        {epgsql, "4.5.0"}
 ]}.
 
 %% To override the plugin as installed by worker_pool
